--- a/resurse/css/general.css
+++ b/resurse/css/general.css
@@ -1,27 +1,41 @@
 #tab_orar th, #tab_orar td{
     border: 1px solid black;
     padding: 10px;
-    transition: all 0.4s linear;
+    transition: all 0.75s linear;
 }
 
 #tab_orar{
     border-spacing: 0;
     border-collapse: collapse;
+    width: 100%;
+    height: 100%;
 }
+
+#tab_orar thead th{
+  border: 3px solid;
+}
+
+#tab_orar tbody tr:nth-child(odd){
+  box-shadow: 0px 4px 10px var(--color1);
+}
+#tab_orar tbody tr:nth-child(even){
+  box-shadow: 0px 4px 10px var(--color2);
+}
+
+#tab_orar tbody tr:hover{
+  background-color: var(--color1);
+  color: white;
+  font-size: 1.2rem;
+}
+
+
+
 /*din 2 in 2,pe impar, in head-ul tabelului fac fundal gri*/
 #tab_orar thead th:nth-child(2n+1){
     background-color: grey;
 }
-/*toate td-urile care au rowspan ca atribut vor schimba background la hover*/
-#tab_orar td[rowspan]:hover{
-    background-color: orange;
-} 
 
 
-
-
-
-footer{
 
 #link-top{
   position:fixed;
@@ -50,5 +64,4 @@ footer{
   border-right:1rem solid transparent;
   vertical-align: top;
   transform: translateY(30%);
-}
 }
