--- a/resurse/css/layout.css
+++ b/resurse/css/layout.css
@@ -24,6 +24,10 @@
 }
 
 #sony{
+    background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), 
+                url("../img/sony.jpg");
+    background-size: cover; /* Asigură că imaginea acoperă complet secțiunea */
+    background-position: center;
     grid-area: sony;
     padding: 5px;
     text-align: center;
@@ -57,69 +61,112 @@
     grid-area: promotii;
 }
 
+#galerie-statica{
+    grid-area: galerie;
+}
+
 #orar{
     grid-area: orar;
+}
+.container_iframe{
+    width: 90%;
+    max-width: 1000px;
+    min-width: 50px;
 }
 
 #grid {
     display: grid;
+    grid-gap:1rem;
     grid-template-areas:
         "welcome welcome welcome"
-        "apple apple apple"
-        "samsung samsung huawei"
-        "samsung samsung sony"
-        "info info promotii"
-        "info info orar";
+        "galerie galerie galerie"
+        "orar orar samsung"
+        "sony apple samsung"
+        "promotii huawei info"
 }
 #grid>*{
     outline: solid var(--color1);
+    border-radius: 15px; 
+}
+
+#account-mediu{
+    display: none;
+}
+#produse-mediu{
+    display: none;
+}
+#cos-mediu{
+    display: none;
+}
+
+#home, #ch-meniu{
+    display: none;
 }
 
 
-/* ecran mediu */
-@media screen and (max-width: 1200px) {
-    html{
-        font-size: 14px;
-    }
-    
-    body{
-        --spatiere: 100px;
-
-    }
-
-        #grid {
-            display: grid;
-            grid-template-areas:
-                "welcome welcome"
-                "apple apple"
-                "samsung samsung"
-                "samsung_iframe samsung_iframe"
-                "info promotii";
-        }
-
-    
-
-    
+#grid-galerie>:nth-child(1){
+    grid-area: 1/1;
+}
+#grid-galerie>:nth-child(2){
+    grid-area: 1/2;
+}
+#grid-galerie>:nth-child(3){
+    grid-area: 1/3;
+}
+#grid-galerie>:nth-child(4){
+    grid-area: 2/1;
+}
+#grid-galerie>:nth-child(5){
+    grid-area: 2/3;
+}
+#grid-galerie>:nth-child(6){
+    grid-area: 3/1;
+}
+#grid-galerie>:nth-child(7){
+    grid-area: 3/2;
+}
+#grid-galerie>:nth-child(8){
+    grid-area: 3/3;
+}
+#grid-galerie>:nth-child(9){
+    grid-area: 4/1;
+}
+#grid-galerie>:nth-child(10){
+    grid-area: 4/3;
+}
+#grid-galerie>:nth-child(11){
+    grid-area: 5/1;
+}
+#grid-galerie>:nth-child(12){
+    grid-area: 5/2;
+}
+#grid-galerie>:nth-child(13){
+    grid-area: 5/3;
 }
 
 
-/* ecran mic */
-@media screen and (max-width: 800px) {
-    html{
-        font-size: 12px;
-    }
-    
-    body{
-        --spatiere: 50px;
-
-    }
-
-    #grid {
-        display: block;
-       
-    }
 
 
-    
+#grid-galerie {
+    display:grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-row-gap:0.5em;
+    grid-column-gap:0.5em;
+    counter-reset: nrimag 3; 
+   }
+
+#grid-galerie>*{
+    width: 200px;
+    height: 200px;
+    padding: 30px;
+    margin: 0 auto;
+    border: 1px solid var(--color2);
+    transition: all linear var(--transition_time);
+}
+
+
+
+#grid-galerie img{
+    width: 100%;
 }
 
