--- a/resurse/css/nav.css
+++ b/resurse/css/nav.css
@@ -1,6 +1,6 @@
 nav{
     --inaltime: 2rem;
-    --latime_buton: 100px;
+    --latime_buton: 120px;
     --culoare_text: black;
 }
 
@@ -9,25 +9,37 @@ nav{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 30px;  
-    height: 30px;
+    width: 2rem;  
+    height: 2rem;
 }
 
 .hamburger div {
     background-color: black; 
-    height: 5px; 
+    height: 1rem; 
     width: 100%; 
-    border-radius: 5px; 
+    border-radius: 1px; 
     margin: 2px;
     transition: transform 0.3s ease; 
 }
 
 .hamburger:hover div {
-    background-color: var(--color1); /* Schimbă culoarea liniilor */
+    background-color: white; /* Schimbă culoarea liniilor */
 }
 
+/*Submeniu*/
 .meniu ul{
     display: none;
+    background-color: var(--color2);
+    padding: 0;
+    list-style-type: none;
+    z-index: 3;
+    position: relative;
+    animation-name: afis-submeniu;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: 1;
+    transform-origin: 50% 0;
+
 }
 .meniu{
     display: flex;
@@ -44,11 +56,53 @@ nav{
     border: 1px solid var(--color1);
     font-weight: bold;
     height: var(--inaltime);
-    width: var(--latime_buton);
+    line-height: var(--inaltime);
+    min-width: var(--latime_buton);
+
+    background-color: var(--color2);
+    cursor: pointer;
+    box-sizing: border-box;
+    
+}
+
+.meniu li:hover{
+    font-size: 1.07rem;
+    transition: all 0.4s linear;
 }
 .meniu a, .meniu div:not(.hamburger){
     text-decoration: none;
     color: var(--culoare_text);
+    padding-left: 2px;
+    padding-right: 2px;
     display: block;
     height: 100%;
+}
+
+.meniu li:hover ul{
+    display: block;
+}
+
+.meniu a:hover, .meniu div:hover{
+    color: white;
+    transition: all 0.4s linear;
+}
+
+#galerie_statica_mediu{
+    display: none;
+}   
+#produse_mediu{
+    display: none;
+}   
+
+
+@keyframes afis-submeniu{
+    0%{
+        transform: scaleY(0);
+        opacity: 0;
+    }
+
+    100%{
+        transform: scaleY(1);
+        opacity: 1;
+    }
 }
