--- a/resurse/css/print.css
+++ b/resurse/css/print.css
@@ -42,7 +42,9 @@
         padding:5px;
         display: block;
         background: white;
-        border:2px solid black;
+        border: 4px double black; /* Border negru, linie dublă */
+        padding: 10px; 
+        text-align: center; 
         border-top-left-radius:10px;
         border-bottom-left-radius:10px;
         border-right:none;
