--- a/resurse/css/stil.css
+++ b/resurse/css/stil.css
@@ -9,9 +9,49 @@ html section>*{
     
 }
 
+
+#titlu {
+    font-weight: bold;
+    color: var(--color1);
+    position: relative;
+    display: inline-block;
+}
+
+#titlu2{
+
+    color: var(--color1);
+    filter: blur(2px);
+    top:100%;
+	transform-origin:0 0;
+	transform: rotateX(180deg) skew(-45deg) scaleY(0.75) translate(10px,-25px); 
+	opacity:0.75;
+    transition: all 0.5s linear;
+
+}
+
+#titlu2:hover{
+
+    color: var(--color1);
+    filter: blur(2px);
+    top:100%;
+	transform: rotateX(180deg) skew(-45deg) scaleY(1) translate(10px,-25px); 
+	opacity:0.75;
+
+}
+
+footer{
+    color: white;
+    padding: 10px;
+}
+footer a{
+    color: white
+}
+
 body{
     --color1: #29297D;
+    --color2: #5656C8;
     --spatiere: 100px;
+    --transition_time : 0.5s;
     padding-left: var(--spatiere);
     padding-right: var(--spatiere);
     transition: all 0.5s linear;
@@ -20,6 +60,18 @@ body{
     font-optical-sizing: auto;
     font-weight: weight;
     font-style: normal;
+}
+
+body.dark{
+    background-color: grey;
+    --color1: darkblue;
+    --color2: purple;
+    
+
+}
+
+footer{
+    background-color: purple;
 }
 
 h2{
@@ -34,12 +86,33 @@ h2{
     transition: all 0.5s ease;
 }
 
+.imag{
+    width: 100%;
+    height: 100%;
+}
+
 #iph:hover, #ipad:hover, #mac:hover {
     opacity: 1;
 }
 
 .container_iframe {
     display: flex;
+    flex-direction: column;
+    width: 100%;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    
+}
+.container_iframe iframe {
+    width: 100%;
+    border: none; /* Elimină bordura iframe-ului */
+}
+
+.taburi_iframe{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .taburi_iframe>a{  /*selectez link-urile din iframe */
@@ -49,12 +122,25 @@ h2{
     height: 30px;
     border-radius: 10px;
     line-height: 30px; /* line height = height pentru text centrat pe verticala */
-    box-shadow: 10px 0px 5px 5px ; 
+    box-shadow: 0px 0px 5px var(--color1) ; 
+    text-decoration: none;
 }
 
-.taburi_iframe{
-    display: block;
-    
+.taburi_iframe>a:hover{
+    background: var(--color2) ;
+    transition: all 0.5s linear;
+    color: white;
+}
+
+#address-ifr {
+    width: 100%;
+    height: 100%;
+}
+
+
+#galerie-statica{
+    width: 100%;
+    margin: 0 auto;
 }
 
 
